# CMB-M2-Coding-Turing

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
notebooks/: 0.Functions.ipynb  1.Classes.ipynb  2.Class_initialisation.ipynb  3.GameOfLife.ipynb  4.Preparing_Turing.ipynb  5.Turing_no_space.ipynb  6.Modeling_diffusion.ipynb  Classes.ipynb
src/turing_models/: TuringModels.py  __init__.py
