[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.briefcase]
project_name = "CMBCourse"
author = "Leo Guignard"
license = "MIT"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/CMBCourse/__init__.py" = [
    '__version__ = "{version}"',
]
"setup.cfg" = [
    'version = {version}',
]