[metadata]
name = CMBCourse
version = 0.0.1
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
url = https://github.com/GuignardLab/CMB-M2-Coding-Turing
license = MIT
description = A course to learn Python using reaction-diffusion simulations
long_description = file: README.md
long_description_content_type = text/markdown
summary = A course to learn Python using reaction-diffusion simulations
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Students
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/GuignardLab/CMB-M2-Coding-Turing/issues
    Documentation = https://github.com/GuignardLab/CMB-M2-Coding-Turing#README.md
    Source Code = https://github.com/GuignardLab/CMB-M2-Coding-Turing
    User Support = https://github.com/GuignardLab/CMB-M2-Coding-Turing/issues
    Twitter = https://twitter.com/guignardlab
python_requires = >=3.8
classifier =
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    scipy
    numpy
    matplotlib
    notebook
    imageio

[options.packages.find]
where = src